# src/routes/categories.js
@@ -41,7 +41,7 @@ router.get('/:categoryId(\\d+)', async (req, res) => {
         if (!category) {
             logger.error('User %s tried to fetch unknown category %s', user.username, categoryId);
             res.status(404).json({
-                error_code: 'category_not_found',
+                error_code: 'not_found',
                 message: 'Category does not exist'
             });
             return;
